Create page macandcheese

--- a/recipes/macandcheese.html
+++ b/recipes/macandcheese.html
@@ -4,13 +4,12 @@
     <head>
         <meta charset="UTF-8">
         <title>
-            Odin Recipes
+            Homemade Mac and Cheese
         </title>
     </head>
     <body>
         <h1>
-            Odin Recipes
+            Homemade Mac and Cheese
         </h1>
-        <a href="recipes/macandcheese.html">Homemade Mac and Cheese</a>
     </body>
 </html>
