--- a/index.html
+++ b/index.html
@@ -11,6 +11,16 @@
         <h1>
             Odin Recipes
         </h1>
-        <a href="recipes/macandcheese.html">Homemade Mac and Cheese</a>
+        <ul>
+            <li>
+                <a href="recipes/macandcheese.html">Homemade Mac and Cheese</a>
+            </li>
+            <li>
+                <a href="recipes/enchiladas.html">Chicken Enchiladas</a>
+            </li>
+            <li>
+                <a href="recipes/chilimac.html">Chili Mac</a>
+            </li>
+        </ul>
     </body>
 </html>
